# playwright_automation_base

./: LICENSE  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
pages/: home_page.py
tests/: test_home.py
utils/: general_utils.py  page_utils.py
